--- a/hello-java/Containerfile
+++ b/hello-java/Containerfile
@@ -20,6 +20,8 @@ COPY  run-app.sh /opt/app-root/bin/
 RUN   chgrp -R 0  /opt/app-root && \
       chmod -R g=u /opt/app-root
 
+USER 1001
+
 EXPOSE 8080
 
 # Run the fat JAR
